--- a/app/views/events/_done_event.html.erb
+++ b/app/views/events/_done_event.html.erb
@@ -35,7 +35,7 @@
                           <br />
                         <% end %>
                         <% if (event.responsible_person.try(:full_name)) %>
-                          Vedoucí: <%= event.responsible_person.full_name %>
+                          Vedoucí: <strong><%= event.responsible_person.full_name %></strong>
                         <% end %>
                     </div>
                 </div>
