--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 <% end %>
 
-<table class="table table-striped">
+<table class="table">
   <thead>
     <tr>
       <th><%= t('activerecord.attributes.training.date') %></th>
