--- a/app/views/life_guarding_timespans/current.html.erb
+++ b/app/views/life_guarding_timespans/current.html.erb
@@ -6,7 +6,7 @@
 
 <p>Přihlašování na Hartvíkovice. Přihlašovat se mohou jen členi. Pokud budete potřebovat odhlásit, kontaktujte předsedu. Přihlašujte se s rozmyslem, ať to nemusíme ručně opravovat.</p>
 <p> Zapisujte se prosím od neděle do soboty. <br />Výměna směn probíhá v sobotu večer, pokud se směny nedomluví jinak. </p>
-<p> Ti kdo nejedete jako vedoucí na tábor, prosím přihlašujte se přednostně na termín tábora 13 - 20. 7.</p>
+<p> Ti kdo nejedete jako vedoucí na tábor, prosím přihlašujte se přednostně na termín tábora 25. 7. - 1.8. 2015</p>
 
 <%= render "modal_template"%>
 
