--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,13 +65,19 @@
                   <%= image_tag("logo-skupina-cez.jpg", :class => "banner", :size => "170x120") %>
                 <% end %>
 
-                <%= link_to 'http://www.vzp.cz' do %>
+                  <%= link_to 'http://www.lagunatrebic.cz' do %>
+                    <%= image_tag("laguna_160x160.jpg", :class => "banner", :size => "160x160") %>
+                  <% end %>
+
+                  <%= link_to 'http://www.trebic.cz' do %>
+                    <%= image_tag("logo-trebic_160x91.jpg", :class => "banner", :size => "160x91") %>
+                  <% end %>
+
+
+                  <%= link_to 'http://www.vzp.cz' do %>
                   <%= image_tag("VZP_modul-A_barva.png", :class => "banner", :size => "180x38") %>
                 <% end %>
 
-                <%= link_to 'http://www.zpravodajedu.cz' do %>
-                  <%= image_tag("dukovany_160x160_v02.gif", :class => "banner", :size => "160x160") %>
-                <% end %>
 
               </div><!--/.well -->
             </div><!--/span-->
