Oprava formulare - nenacital se opakovane ze serveru, ale posilal se stale stejny.

--- a/app/views/life_guarding_timespans/_modal_template.html.erb
+++ b/app/views/life_guarding_timespans/_modal_template.html.erb
@@ -1,4 +1,4 @@
-<div id="modal" class="modal hide fade" role="form">
+<div id="modal" class="modal hide fade modal-remote" role="form">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal"><i class="icon-remove"></i></button>
     <h3 id="myModalLabel">Vyber člena</h3>
