--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
                   <%= image_tag("znakVZS_150x150.gif", :size => "150x150", :class => "vzs-main-logo img-circle") %>
                 <% end %>
                 <%= render 'layouts/menu' %>
-                <%= render 'layouts/treninky' %>
+                <% render 'layouts/treninky' %>
 
                 <%= link_to 'http://www.cez.cz' do %>
                   <%= image_tag("logo-skupina-cez.jpg", :class => "banner", :size => "170x120") %>
