--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -8,7 +8,7 @@
     <%= f.input :place %>
     <%= f.input :event_type %>
     <%= f.input :link %>
-    <%= f.input :responsible_person %>
+    <%= f.input :responsible_person, :collection => Profile.sorted_members %>
     <%= f.input :default_hours_of_work %>
     <%= f.input :group, :as => :select, :collection => group_names, :include_blank => false %>
   <% end %>
