--- a/app/views/layouts/_title.html.erb
+++ b/app/views/layouts/_title.html.erb
@@ -2,6 +2,6 @@
                 <h2 class="vzs-main-title-text fn org">
                   Vodní záchranná služba ČČK
                   <br />
-                    MS Třebíč
+                    Třebíč
                 </h2>
               </div>
