Prejmenovani nadpisu v tabulce hlidani

--- a/app/views/life_guarding_timespans/_life_guarding_timespan.html.erb
+++ b/app/views/life_guarding_timespans/_life_guarding_timespan.html.erb
@@ -2,10 +2,10 @@
   <thead>
     <tr>
       <th class="span2">Datum</th>
-      <th class="span2">1</th>
-      <th class="span2">2</th>
-      <th class="span2">3</th>
-      <th class="span2">4</th>
+      <th class="span2">Velitel</th>
+      <th class="span2">Zdravotník</th>
+      <th class="span2">Řidič</th>
+      <th class="span2">Posádka</th>
     </tr>
   </thead>
   <tbody>
